--- a/contact.html
+++ b/contact.html
@@ -6,39 +6,51 @@ background: '/img/bg-contact.jpg'
 form: true
 ---
 
+<!-- <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+<form id="contactform" method="POST">
+  <input type="text" name="name" placeholder="Your name">
+  <input type="email" name="_replyto" placeholder="Your email">
+  <input type="hidden" name="_subject" value="Website contact" />
+  <textarea name="message" placeholder="Your message"></textarea>
+  <input type="text" name="_gotcha" style="display:none" />
+  <input type="submit" value="Send">
+</form> -->
+
+
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-<form name="sentMessage" id="contactForm" novalidate>
+<form name="sentMessage" id="contactform" novalidate method="POST">
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Name</label>
-      <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+      <input type="text" class="form-control" placeholder="Name" id="name" name="name" required data-validation-required-message="Please enter your name.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Email Address</label>
-      <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+      <input type="email" class="form-control" placeholder="Email Address" id="email" name = "_replyto" required data-validation-required-message="Please enter your email address.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
-  <div class="control-group">
+  <input type="hidden" name="_subject" value="Website Contact" />
+  <input type="text" name="_gotcha" style="display:none" />
+  <!-- <div class="control-group">
     <div class="form-group col-xs-12 floating-label-form-group controls">
       <label>Phone Number</label>
       <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
       <p class="help-block text-danger"></p>
     </div>
-  </div>
+  </div> -->
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Message</label>
-      <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+      <textarea rows="5" class="form-control" placeholder="Message" id="message" name ="message" required data-validation-required-message="Please enter a message."></textarea>
       <p class="help-block text-danger"></p>
     </div>
   </div>
-  <br>
   <div id="success"></div>
   <div class="form-group">
-    <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+    <button type="submit" class="btn btn-primary" id="sendMessageButton" value="Send">Send</button>
   </div>
 </form>
